# eink_lichess_hlss

./: .env.example  Dockerfile  Makefile  README.md  RENDERER_REWRITE_PROGRESS.md  alembic.ini  docker-compose.yml  hlss_openapi.yaml  llss_openapi.yaml  match_screen.html  match_screen_2.html  match_screen_bk.html  new_match_screen.html  new_match_screen_bk.html  proto_bold.py  proto_mac.py  pyproject.toml  render_check.py  requirements.txt  setup_screen.html  test_screen.html
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.devcontainer.yml
alembic/: env.py
alembic/versions/: 001_add_instance_llss_fields.py  002_add_adversaries_and_new_match_state.py  003_move_move_state_to_game.py  004_add_lichess_challenges.py  005_add_local_backend_fields.py  006_add_frame_pressed_strips.py  007_add_frame_enabled_mask.py  008_add_frame_full_refresh.py
deploy/: Dockerfile  compose.local.yml  compose.yml
docs/: INTERFACE_DESIGN.md
scripts/: test_render_html.py
src/hlss/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
src/hlss/assets/cp2150/: Geneva_12.pbm  Geneva_12.pil  Geneva_15.pbm  Geneva_15.pil
src/hlss/routers/: __init__.py  accounts.py  configure.py  frames.py  games.py  inputs.py  instances.py
src/hlss/services/: __init__.py  backends.py  game_stream.py  html_renderer.py  input_processor.py  lichess.py  llss.py  local_engine.py  move_selection.py  new_match_state.py  pil_engine.py  refresh_state.py  renderer.py  view_state.py
tests/: __init__.py  conftest.py  test_api.py  test_llss_service.py
